force-app/main/default/objects/Event_Speaker__c/Event_Speaker__c.object-meta.xml
<CustomObject>
    <description>speaker who will speak at the event</description>
    <label>Event Speaker</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Event Speaker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Speakers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>