force-app/main/default/objects/Event_Speaker__c/fields/duplicate_speaker__c.field-meta.xml
<CustomField>
    <fullName>duplicate_speaker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>duplicate speaker</label>
    <type>Checkbox</type>
</CustomField>