force-app/main/default/objects/Event_Speaker__c/validationRules/Event_Speaker_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Event_Speaker_Rule</fullName>
    <active>true</active>
    <description>A speaker can only be associated with the Event whose End Date is in the future &amp; Event is Live.</description>
    <errorConditionFormula>OR ( Event__r.End__c &lt;=  NOW(),  NOT( Event__r.Live__c )  )</errorConditionFormula>
    <errorMessage>A speaker can only be associated with the Event whose End Date is in the future &amp; Event is Live.</errorMessage>
</ValidationRule>