force-app/main/default/objects/Event_Speaker__c/validationRules/Is_Speaker_Suplpicate.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Speaker_Suplpicate</fullName>
    <active>true</active>
    <errorConditionFormula>duplicate_speaker__c</errorConditionFormula>
    <errorMessage>Speaker Already Exists</errorMessage>
</ValidationRule>